--- a/langages.html
+++ b/langages.html
@@ -20,6 +20,8 @@
   <!-- vitejs -->
   <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vitejs/vitejs-original.svg"
+    width="40"
+    height="40"
   />
   <!-- javascript -->
   <img
@@ -44,6 +46,8 @@
   <!-- materialui -->
   <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/materialui/materialui-original.svg"
+    width="40"
+    height="40"
   />
   <!-- tailwindcss -->
   <img
