--- a/tools.html
+++ b/tools.html
@@ -1,8 +1,12 @@
-<div>
+<p>
   <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg"
+    width="40"
+    height="40"
   />
   <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/slack/slack-original.svg"
+    width="40"
+    height="40"
   />
-</div>
+</p>
