--- a/tools.html
+++ b/tools.html
@@ -9,4 +9,7 @@
     width="40"
     height="40"
   />
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/trello/trello-original.svg"
+  />
 </p>
