--- a/langages.html
+++ b/langages.html
@@ -37,6 +37,18 @@
     width="40"
     height="40"
   />
+  <!-- redux -->
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/redux/redux-original.svg"
+    width="40"
+    height="40"
+  />
+  <!-- sass -->
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/sass/sass-original.svg"
+    width="40"
+    height="40"
+  />
   <!-- antdesign -->
   <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/antdesign/antdesign-original.svg"
@@ -58,6 +70,29 @@
   <!-- vercel -->
   <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vercel/vercel-original.svg"
+    width="40"
+    height="40"
+  />
+  <!-- storybook -->
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/storybook/storybook-original.svg"
+    width="40"
+    height="40"
+  />
+  <!-- sentry -->
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/sentry/sentry-original.svg"
+    width="40"
+    height="40"
+  />
+  <!-- threejs -->
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/threejs/threejs-original.svg"
+    width="40"
+    height="40"
+  />
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postgresql/postgresql-original.svg"
     width="40"
     height="40"
   />
