--- a/tools.html
+++ b/tools.html
@@ -1,15 +1,48 @@
 <p>
+  <!-- vscode -->
   <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg"
     width="40"
     height="40"
   />
+  <!-- slack -->
   <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/slack/slack-original.svg"
     width="40"
     height="40"
   />
   <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/notion/notion-original.svg"
+    width="40"
+    height="40"
+  />
+  <!-- trello -->
+  <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/trello/trello-original.svg"
+    width="40"
+    height="40"
+  />
+  <!-- sketch -->
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/sketch/sketch-original.svg"
+    width="40"
+    height="40"
+  />
+  <!-- postman -->
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/postman/postman-original.svg"
+    width="40"
+    height="40"
+  />
+  <!-- ohmyzsh -->
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/ohmyzsh/ohmyzsh-original.svg"
+    width="40"
+    height="40"
+  />
+  <img
+    src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/insomnia/insomnia-original.svg"
+    width="40"
+    height="40"
   />
 </p>
