--- a/social.html
+++ b/social.html
@@ -2,6 +2,15 @@
   <a href="">
     <img
       src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
+      width="40"
+      height="40"
+    />
+  </a>
+  <a href="">
+    <img
+      src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
+      width="40"
+      height="40"
     />
   </a>
 </p>
