--- a/langages.html
+++ b/langages.html
@@ -1,4 +1,4 @@
-<p align="left">
+<p align="center">
   <!-- react -->
   <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg"
