--- a/social.html
+++ b/social.html
@@ -1,4 +1,4 @@
-<p>
+<p align="center">
   <a href="">
     <img
       src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
@@ -6,7 +6,7 @@
       height="40"
     />
   </a>
-  <a href="">
+  <a href="https://www.linkedin.com/in/cfatrane/">
     <img
       src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
       width="40"
