--- a/tools.html
+++ b/tools.html
@@ -1,4 +1,4 @@
-<p>
+<p align="center">
   <!-- vscode -->
   <img
     src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/vscode/vscode-original.svg"
