--- a/social.html
+++ b/social.html
@@ -1,12 +1,20 @@
 <p align="center">
-  <a href="https://twitter.com/aristoteartem" target="_blank">
+  <a
+    href="https://twitter.com/aristoteartem"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
     <img
       src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/twitter/twitter-original.svg"
       width="40"
       height="40"
     />
   </a>
-  <a href="https://www.linkedin.com/in/cfatrane/" target="_blank">
+  <a
+    href="https://www.linkedin.com/in/cfatrane/"
+    target="_blank"
+    rel="noopener noreferrer"
+  >
     <img
       src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
       width="40"
